fixed modal on mobile responsive

--- a/components/types/type-card/index.module.scss
+++ b/components/types/type-card/index.module.scss
@@ -60,6 +60,16 @@
   }
 }
 
+@media screen and (max-width: 600px) {
+  .modal__img {
+    margin-top: 1em;
+
+    img {
+      max-height: 100px;
+    }
+  }
+}
+
 .modal__title {
   margin-top: 1em;
   text-align: center;
@@ -80,5 +90,24 @@
 
   .flutes {
     margin-top: 0.8em;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .modal__title {
+    font-size: 1.2rem;
+  }
+
+  .modal__description {
+    .desc > p {
+      font-size: 0.9rem;
+    }
+
+    .usage,
+    .flutes {
+      p {
+        font-size: 0.9rem;
+      }
+    }
   }
 }
